<resources>
    <string name="app_name">Todosha</string>
    <string name="action_settings">Settings</string>
    <string name="task_title_hint">Enter a title for the task.</string>
    <string name="task_description_hint">Enter a description for the task.</string>
    <string name="task_title_label">Title:</string>
    <string name="task_description_label">Description:</string>
    <string name="task_alarm">Add alarm:</string>
    <string name="task_alarm_off">Alarm is off</string>
    <string name="tasks_title">Tasks</string>
    <string name="date_picker_title">Date of alarm</string>
    <string name="date_time_dialog">Choose date and time</string>
    <string name="ok">OK</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="new_task">New task</string>
    <string name="delete_task">Delete task</string>
    <string name="empty_list">List of tasks is empty.</string>
    <string name="add_task">Add task</string>
    <string name="update_task">Update task</string>
    <string name="settings">Settings</string>
    <string name="title_is_empty">Please, add a title of task</string>
    <string name="deleted">Task deleted. Undo?</string>
    <string name="undo">Undo</string>
    <string name="date_is_old">Choose actual alarm time, please</string>
    <string name="several_task_notification">Several tasks need your attention</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>

</resources>
