<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_label"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_hint"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textCapSentences"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/task_description_label"
        style="?android:listSeparatorTextViewStyle" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_description_hint"
        android:inputType="textMultiLine"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:lines="3" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">
            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_alarm" />
            <Switch
                android:id="@+id/task_alarm_set"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text=""/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/task_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/time" />

        <Button
            android:id="@+id/task_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/date" />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/add_update_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:layout_alignParentBottom="true"
        android:enabled="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/add_task"
        android:textSize="15sp" />
</RelativeLayout>
